--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@daydaybigking/my-first-cli",
-  "version": "0.2.0",
-  "description": "",
+  "name": "@zhaohui18755177994/cli-new",
+  "version": "1.0.5",
+  "description": "学习如何从零开始搭建一个工程样板。",
   "main": "./dist/lib.commonjs.js",
   "module": "./dist/lib.esm.js",
   "scripts": {
@@ -12,10 +12,7 @@
     "report": "nyc report --reporter=html"
   },
   "keywords": [],
-  "author": {
-    "name": "DayDay",
-    "email": "daydaybigking@sina.com"
-  },
+  "author": "zhaohui <zhaohui@sina.com>",
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
   },
@@ -52,5 +49,16 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.5.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhaohui-123/my-first-cli.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zhaohui-123/my-first-cli/issues"
+  },
+  "homepage": "https://github.com/zhaohui-123/my-first-cli#readme"
 }
